--- a/views/scm/invPu/initPur.html
+++ b/views/scm/invPu/initPur.html
@@ -94,8 +94,10 @@
         <dd class="pct30">
           <label>供应商:</label>
           <span class="ui-combo-wrap" id="customer">
-          <input type="text" name="" class="input-txt" autocomplete="off" value="" data-ref="date">
-          <i class="ui-icon-ellipsis"></i></span></dd>
+            <input type="text" name="" class="input-txt" autocomplete="off" value="" data-ref="date">
+            <i class="ui-icon-ellipsis"></i>
+          </span>
+        </dd>
         <dd class="pct25 tc">
           <label>单据日期:</label>
           <input type="text" id="date" class="ui-input ui-datepicker-input" value="2015-08-27">
