--- a/views/settings/vendor-manage.html
+++ b/views/settings/vendor-manage.html
@@ -1,36 +1,50 @@
-<?php $this->load->view('header');?>
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=1280, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="renderer" content="webkit|ie-stand|ie-comp">
+	<title>小微企业ERP</title>
+	<link href="../../statics/saas/scm/app2_release/css/common.css?ver=20150522" rel="stylesheet" type="text/css">
+	<link href="../../statics/saas/scm/app2_release/css/green/ui.min.css?ver=20150522" rel="stylesheet">
+	<script src="../../statics/saas/scm/app2_release/js/common/libs/jquery/jquery-1.10.2.min.js?10"></script>
+	<script src="../../statics/saas/scm/app2_release/js/common/libs/json3.min.js?10"></script>
+	<script src="../../statics/saas/scm/app2_release/js/common/common.js?ver=20151021"></script>
+	<script src="../../statics/saas/scm/app2_release/js/common/grid.js?ver=20151021"></script>
+	<script src="../../statics/saas/scm/app2_release/js/common/plugins.js?ver=20151021"></script>
+	<script src="../../statics/saas/scm/app2_release/js/common/plugins/jquery.dialog.js?self=true&ver=20151021"></script>
  
 
-<script type="text/javascript">
-var DOMAIN = document.domain;
-var WDURL = "";
-var SCHEME= "<?php echo sys_skin()?>";
-try{
-	document.domain = '<?php echo base_url()?>';
-}catch(e){
-}
-//ctrl+F5 增加版本号来清空iframe的缓存的
-$(document).keydown(function(event) {
-	/* Act on the event */
-	if(event.keyCode === 116 && event.ctrlKey){
-		var defaultPage = Public.getDefaultPage();
-		var href = defaultPage.location.href.split('?')[0] + '?';
-		var params = Public.urlParam();
-		params['version'] = Date.parse((new Date()));
-		for(i in params){
-			if(i && typeof i != 'function'){
-				href += i + '=' + params[i] + '&';
-			}
+	<script type="text/javascript">
+		var DOMAIN = document.domain;
+		var WDURL = "";
+		var SCHEME= "<?php echo sys_skin()?>";
+		try{
+			document.domain = '<?php echo base_url()?>';
+		}catch(e){
 		}
-		defaultPage.location.href = href;
-		event.preventDefault();
-	}
-});
-</script>
+		//ctrl+F5 增加版本号来清空iframe的缓存的
+		$(document).keydown(function(event) {
+			/* Act on the event */
+			if(event.keyCode === 116 && event.ctrlKey){
+				var defaultPage = Public.getDefaultPage();
+				var href = defaultPage.location.href.split('?')[0] + '?';
+				var params = Public.urlParam();
+				params['version'] = Date.parse((new Date()));
+				for(i in params){
+					if(i && typeof i != 'function'){
+						href += i + '=' + params[i] + '&';
+					}
+				}
+				defaultPage.location.href = href;
+				event.preventDefault();
+			}
+		});
+	</script>
 
-<link rel="stylesheet" href="<?php echo base_url()?>/statics/js/common/plugins/validator/jquery.validator.css">
-<script type="text/javascript" src="<?php echo base_url()?>/statics/js/common/plugins/validator/jquery.validator.js"></script>
-<script type="text/javascript" src="<?php echo base_url()?>/statics/js/common/plugins/validator/local/zh_CN.js"></script>
+<link rel="stylesheet" href="../../statics/js/common/plugins/validator/jquery.validator.css">
+<script type="text/javascript" src="../../statics/js/common/plugins/validator/jquery.validator.js"></script>
+<script type="text/javascript" src="../../statics/js/common/plugins/validator/local/zh_CN.js"></script>
 <style>
 body{background: #fff;}
 .mod-form-rows .label-wrap{font-size:12px;}
@@ -118,7 +132,7 @@ body{background: #fff;}
 	    <input type="text" class="textbox address" name="address" id="address" autocomplete="off" readonly>
 	</div>
 </div>
-<script src="<?php echo base_url()?>/statics/js/dist/vendorManage.js?ver=20190818"></script>
+<script src="../../statics/js/dist/vendorManage.js?ver=20190818"></script>
 </body>
 </html>
 
