--- a/views/settings/goods-manage.html
+++ b/views/settings/goods-manage.html
@@ -97,11 +97,11 @@ body{background: #fff;}
 <div class="hd cf">
 	<ul class="ui-tab" id="tab">
 		<li class="cur tabItem">基础资料</li>
-        <li class="tabItem">库存预警</li>
-        <li class="tabItem">高级</li>
-        <li class="tabItem">期初设置</li>
-        <li class="tabItem">套餐</li>
-		<li class="tabItem">售价设定</li>
+      <li class="tabItem">库存预警</li>
+      <li class="tabItem">高级</li>
+      <li class="tabItem">期初设置</li>
+      <li class="tabItem">套餐</li>
+		<!-- <li class="tabItem">售价设定</li> -->
 	</ul>
 </div>
 <div id="tabContent">
