--- a/views/settings/authority-new.html
+++ b/views/settings/authority-new.html
@@ -107,7 +107,8 @@ $(document).keydown(function(event) {
                 </li>
               </ul>
               <div class="btn-row">
-                <a href="authority" class="ui-btn mrb">返回列表</a><a href="#" class="ui-btn ui-btn-sp" id="registerBtn">下一步</a>
+                <a href="/views/settings/authority.html" class="ui-btn mrb">返回列表</a>
+                <a href="#" class="ui-btn ui-btn-sp" id="registerBtn">下一步</a>
               </div>
             </form>
         </div>
