--- a/views/settings/authority-setting.html
+++ b/views/settings/authority-setting.html
@@ -30,7 +30,7 @@ try{
 <div class="wrapper">
   <div class="mod-toolbar-top cf">
     <div class="fl"><h3 class="f14">详细权限设置<span class="fwn">（请勾选为 <b id="userName"></b> 分配的权限）</span></h3></div>
-    <div class="fr"><a class="ui-btn ui-btn-sp mrb" id="save">确定</a><a class="ui-btn" href="<?php echo site_url('settings/authority')?>">返回</a></div>
+    <div class="fr"><a class="ui-btn ui-btn-sp mrb" id="save">确定</a><a class="ui-btn" href="/views/settings/authority.html">返回</a></div>
   </div>
   <div class="grid-wrap">
     <table id="grid">
