--- a/views/settings/authority-setting-data.html
+++ b/views/settings/authority-setting-data.html
@@ -62,7 +62,7 @@ $(document).keydown(function(event) {
     		</span>
 		</p>
 	</div>
-    <div class="fr"><a class="ui-btn ui-btn-sp mrb" id="save">确定</a><a class="ui-btn" href="authority">返回</a></div>
+    <div class="fr"><a class="ui-btn ui-btn-sp mrb" id="save">确定</a><a class="ui-btn" href="/views/settings/authority.html">返回</a></div>
   </div>
   <div class="grid-wrap">
     <table id="grid">
