--- a/views/report/pu-detail-new.html
+++ b/views/report/pu-detail-new.html
@@ -1,26 +1,25 @@
-<?php if(!defined('BASEPATH')) exit('No direct script access allowed');?>
-
 <!doctype html>
 <html lang="zh-CN">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="renderer" content="webkit">
-<title>六和之家ERP</title>
-<link href="<?php echo base_url()?>statics/css/common.css?ver=20140430" rel="stylesheet">
-<link href="<?php echo base_url()?>statics/css/<?php echo sys_skin()?>/ui.min.css?ver=20140430" rel="stylesheet">
-<script src="<?php echo base_url()?>statics/js/common/seajs/2.1.1/sea.js?ver=20140430" id="seajsnode"></script>
-<script src="<?php echo base_url()?>statics/js/common/libs/jquery/jquery-1.10.2.min.js"></script>
+<title>小微企业ERP</title>
+<link href="/statics/css/common.css?ver=20140430" rel="stylesheet">
+<link href="/statics/css/green/ui.min.css?ver=20140430" rel="stylesheet">
+<script src="/statics/js/common/seajs/2.1.1/sea.js?ver=20140430" id="seajsnode"></script>
+<script src="/statics/js/common/libs/jquery/jquery-1.10.2.min.js"></script>
 <script type="text/javascript">
-var WDURL = "";
-var SCHEME= "<?php echo sys_skin()?>";
-try{
-	document.domain = '<?php echo base_url()?>';
-}catch(e){
-	//console.log(e);
-}
-//ctrl+F5 增加版本号来清空iframe的缓存的
-$(document).keydown(function(event) {
+  var DOMAIN = document.domain;
+  var WDURL = "";
+  var SCHEME= "<?php echo sys_skin()?>";
+  try{
+    document.domain = '<?php echo base_url()?>';
+  }catch(e){
+  }
+
+  //ctrl+F5 增加版本号来清空iframe的缓存的
+  $(document).keydown(function(event) {
 	/* Act on the event */
 	if(event.keyCode === 116 && event.ctrlKey){
 		var defaultPage = Public.getDefaultPage();
@@ -37,7 +36,7 @@ $(document).keydown(function(event) {
 	}
 });
 </script>
-<link rel="stylesheet" href="<?php echo base_url()?>statics/css/report.css?2" />
+<link rel="stylesheet" href="/statics/css/report.css?2" />
 <style>
 .ui-icon-ellipsis{right:5px;}
 #grid tr{cursor:pointer;}
@@ -61,8 +60,8 @@ $(document).keydown(function(event) {
             </ul>
             <ul class="filter-list" id="more-conditions">
               <li>
-                <label class="tit">客户:</label>
-                <span class="mod-choose-input" id="filter-customer"><input type="text" class="ui-input" id="customerAuto"/><span class="ui-icon-ellipsis"></span></span>
+                <label class="tit">供应商:</label>
+                <span class="mod-choose-input" id="filter-customer"><input type="text" class="ui-input" id="supplierAuto"/><span class="ui-icon-ellipsis"></span></span>
               </li>
               <li style="height:60px; ">
                 <label class="tit">商品:</label>
@@ -72,11 +71,6 @@ $(document).keydown(function(event) {
               <li>
                 <label class="tit">仓库:</label>
                 <span class="mod-choose-input" id="filter-storage"><input type="text" class="ui-input" id="storageAuto"/><span class="ui-icon-ellipsis"></span></span>
-              </li>
-        <li class="chk-list dn" id="profit-wrap">
-                <label class="chk">
-                  <input type="checkbox" value="profit" name="profit" />
-                  计算毛利</label>
               </li>
             </ul>
             <div class="btns"> <a href="#" id="conditions-trigger" class="conditions-trigger" tabindex="-1">更多条件<b></b></a> <a class="ui-btn ui-btn-sp" id="filter-submit" href="#">确定</a> <a class="ui-btn" id="filter-reset" href="#" tabindex="-1">重置</a> </div>
@@ -90,19 +84,17 @@ $(document).keydown(function(event) {
   <div class="ui-print">
     <span id="config" class="ui-icon ui-state-default ui-icon-config"></span>
     <div class="grid-wrap" id="grid-wrap">
-			<div class="grid-title">销售汇总表（按客户）</div>
+      <div class="grid-title">商品采购明细表</div>
 			<div class="grid-subtitle"></div>
 	    	<table id="grid"></table>
 	   	</div>
 	</div>
     <div class="no-query"></div>
 </div>
-
   
 <script>
-	seajs.use("dist/salesSummaryCustomerNew");
+	seajs.use("dist/puDetailNew");
 </script>
 </body>
 </html>
 
- 
