--- a/views/report/sales-profit.html
+++ b/views/report/sales-profit.html
@@ -1,15 +1,14 @@
-<?php if(!defined('BASEPATH')) exit('No direct script access allowed');?>
 <!doctype html>
 <html lang="zh-CN">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="renderer" content="webkit">
-<title>六和之家ERP</title>
-<link href="<?php echo base_url()?>statics/css/common.css?ver=20140430" rel="stylesheet">
-<link href="<?php echo base_url()?>statics/css/<?php echo sys_skin()?>/ui.min.css?ver=20140430" rel="stylesheet">
-<script src="<?php echo base_url()?>statics/js/common/seajs/2.1.1/sea.js?ver=20140430" id="seajsnode"></script>
-<script src="<?php echo base_url()?>statics/js/common/libs/jquery/jquery-1.10.2.min.js"></script>
+<title>小微企业ERP</title>
+<link href="/statics/css/common.css?ver=20140430" rel="stylesheet">
+<link href="/statics/css/green/ui.min.css?ver=20140430" rel="stylesheet">
+<script src="/statics/js/common/seajs/2.1.1/sea.js?ver=20140430" id="seajsnode"></script>
+<script src="/statics/js/common/libs/jquery/jquery-1.10.2.min.js"></script>
 <script type="text/javascript">
 var WDURL = "";
 var SCHEME= "<?php echo sys_skin()?>";
@@ -36,7 +35,7 @@ $(document).keydown(function(event) {
 	}
 });
 </script>
-<link rel="stylesheet" href="<?php echo base_url()?>statics/css/report.css?2" />
+<link rel="stylesheet" href="/statics/css/report.css?2" />
 <style type="text/css">
 .filter-menu .mod-choose-input{position: relative;*zoom: 1;}
 .filter-menu .mod-choose-input .ui-input{padding-right: 25px;width:226px; font-family:"宋体";}
