--- a/views/settings/resultInfo.html
+++ b/views/settings/resultInfo.html
@@ -1,4 +1,18 @@
-<?php $this->load->view('header');?>
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=1280, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="renderer" content="webkit|ie-stand|ie-comp">
+	<title>小微企业ERP</title>
+	<link href="../../statics/saas/scm/app2_release/css/common.css?ver=20150522" rel="stylesheet" type="text/css">
+	<link href="../../statics/saas/scm/app2_release/css/green/ui.min.css?ver=20150522" rel="stylesheet">
+	<script src="../../statics/saas/scm/app2_release/js/common/libs/jquery/jquery-1.10.2.min.js?10"></script>
+	<script src="../../statics/saas/scm/app2_release/js/common/libs/json3.min.js?10"></script>
+	<script src="../../statics/saas/scm/app2_release/js/common/common.js?ver=20151021"></script>
+	<script src="../../statics/saas/scm/app2_release/js/common/grid.js?ver=20151021"></script>
+	<script src="../../statics/saas/scm/app2_release/js/common/plugins.js?ver=20151021"></script>
+	<script src="../../statics/saas/scm/app2_release/js/common/plugins/jquery.dialog.js?self=true&ver=20151021"></script>
 
 
 <script type="text/javascript">
@@ -28,7 +42,7 @@ $(document).keydown(function(event) {
 });
 </script>
 
-<script src="<?php echo base_url()?>/statics/js/common/libs/swfupload/swfupload.js"></script>
+<script src="/statics/js/common/libs/swfupload/swfupload.js"></script>
 <style>
 body {min-width: 0;}
 .link{color: #3A86B0;text-decoration: underline}
