--- a/views/report/account-proceeds-detail-new.html
+++ b/views/report/account-proceeds-detail-new.html
@@ -1,22 +1,21 @@
-<?php if(!defined('BASEPATH')) exit('No direct script access allowed');?>
 <!doctype html>
 <html lang="zh-CN">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="renderer" content="webkit">
-<title>六和之家ERP</title>
-<link href="<?php echo base_url()?>statics/css/common.css?ver=20140430" rel="stylesheet">
-<link href="<?php echo base_url()?>statics/css/<?php echo sys_skin()?>/ui.min.css?ver=20140430" rel="stylesheet">
-<script src="<?php echo base_url()?>statics/js/common/seajs/2.1.1/sea.js?ver=20140430" id="seajsnode"></script>
-<script src="<?php echo base_url()?>statics/js/common/libs/jquery/jquery-1.10.2.min.js"></script>
+<title>小微企业ERP</title>
+<link href="/statics/css/common.css?ver=20140430" rel="stylesheet">
+<link href="/statics/css/green/ui.min.css?ver=20140430" rel="stylesheet">
+<script src="/statics/js/common/seajs/2.1.1/sea.js?ver=20140430" id="seajsnode"></script>
+<script src="/statics/js/common/libs/jquery/jquery-1.10.2.min.js"></script>
 <script type="text/javascript">
+var DOMAIN = document.domain;
 var WDURL = "";
 var SCHEME= "<?php echo sys_skin()?>";
 try{
 	document.domain = '<?php echo base_url()?>';
 }catch(e){
-	//console.log(e);
 }
 //ctrl+F5 增加版本号来清空iframe的缓存的
 $(document).keydown(function(event) {
@@ -36,69 +35,61 @@ $(document).keydown(function(event) {
 	}
 });
 </script>
-<link rel="stylesheet" href="<?php echo base_url()?>statics/css/report.css" />
+<link rel="stylesheet" href="/statics/css/report.css?2" />
 <style type="text/css">
 .filter-menu .mod-choose-input{position: relative;*zoom: 1;}
 .filter-menu .mod-choose-input .ui-input{padding-right: 25px;width:226px; font-family:"宋体";}
 .filter-menu .ui-datepicker-input{width:105px; font-family:"宋体";}
 .ui-icon-ellipsis{ right:3px; }
 .ul-inline li{position:relative;}
-#goodsAuto{width:200px;}
 .no-query {
-    background: url("<?php echo base_url()?>statics/css/img/no_query.png") no-repeat scroll 100px 60px #fff;
+    background: url("/statics/css/img/no_query.png") no-repeat scroll 100px 60px #fff;
     border: 1px solid #ddd;
     height: 402px;
     margin-right: 18px;
 }
 #chk-wrap{line-height: 30px;}
 .frozen-sdiv{ display: none;}
+#grid tr{cursor:pointer;}
+
 </style>
 </head>
 <body>
 <div class="wrapper">
-
   <div class="mod-search cf">
     <div class="l">
       <ul class="ul-inline fix">
-      	<li>
+        <li>
           <label>日期:</label>
-          <input type="text" value="" class="ui-input ui-datepicker-input" name="filter-fromDate" id
-="filter-fromDate" /> - <input type="text" value="" class="ui-input ui-datepicker-input" name="filter-toDate"
- id="filter-toDate" />
+          <input type="text" value="" class="ui-input ui-datepicker-input" name="filter-fromDate" id="filter-fromDate" /> - <input type="text" value="" class="ui-input ui-datepicker-input" name="filter-toDate" id="filter-toDate" />
         </li>
         <li>
-          <label>仓库:</label>
-          <span class="mod-choose-input" id="filter-storage"><input type="text" class="ui-input" id="storageAuto"
-/><span class="ui-icon-ellipsis"></span></span>
+          <label>客户:</label>
+          <span class="mod-choose-input" id="filter-customer"><input type="text" class="ui-input" id="customerAuto"/><span class="ui-icon-ellipsis"></span></span>
         </li>
-        <li>
-          <label>商品:</label>
-          <span class="mod-choose-input" id="filter-goods"><input type="text" class="ui-input" id="goodsAuto"
-/><span class="ui-icon-ellipsis"></span></span>
-        </li>
+        
         <li><a class="ui-btn mrb" id="filter-submit">查询</a></li>
       </ul>
     </div>
-    <div class="r"><a href="#" class="ui-btn ui-btn-sp fl" id="btn-export">导出</a></div>
+    <div class="fr"><!--<a href="#" class="ui-btn ui-btn-sp mrb fl" id="btn-print">打印</a>--><a href="#" class="ui-btn fl" id="btn-export">导出</a></div>
   </div>
-	
-	<!-- grid begin -->
-	<div class="ui-print" style="overflow: hidden; ">
+  
+  <div class="no-query"></div>
+  <div class="ui-print">
+  <span id="config" class="ui-icon ui-state-default ui-icon-config"></span>
 		<div class="grid-wrap" id="grid-wrap">
-			<div class="grid-title">商品收发明细表</div>
+			<div class="grid-title">应收账款明细表</div>
 			<div class="grid-subtitle"></div>
 	    	<table id="grid"></table>
 	   	</div>
 	</div>
-	<div class="no-query"></div>
-	<!-- grid end -->
-
+  
+  
 </div>
 <script>
-	seajs.use("dist/goodsFlowDetail");
+	seajs.use("dist/accountProceedsDetailNew");
 </script>
 </body>
 </html>
-
 
  
