--- a/views/report/cash-bank-journal-new.html
+++ b/views/report/cash-bank-journal-new.html
@@ -1,23 +1,21 @@
-<?php if(!defined('BASEPATH')) exit('No direct script access allowed');?>
- 
 <!doctype html>
 <html lang="zh-CN">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="renderer" content="webkit">
-<title>六和之家ERP</title>
-<link href="<?php echo base_url()?>statics/css/common.css?ver=20140430" rel="stylesheet">
-<link href="<?php echo base_url()?>statics/css/<?php echo sys_skin()?>/ui.min.css?ver=20140430" rel="stylesheet">
-<script src="<?php echo base_url()?>statics/js/common/seajs/2.1.1/sea.js?ver=20140430" id="seajsnode"></script>
-<script src="<?php echo base_url()?>statics/js/common/libs/jquery/jquery-1.10.2.min.js"></script>
+<title>小微企业ERP</title>
+<link href="/statics/css/common.css?ver=20140430" rel="stylesheet">
+<link href="/statics/css/green/ui.min.css?ver=20140430" rel="stylesheet">
+<script src="/statics/js/common/seajs/2.1.1/sea.js?ver=20140430" id="seajsnode"></script>
+<script src="/statics/js/common/libs/jquery/jquery-1.10.2.min.js"></script>
 <script type="text/javascript">
-var DOMAIN = document.domain;
 var WDURL = "";
 var SCHEME= "<?php echo sys_skin()?>";
 try{
 	document.domain = '<?php echo base_url()?>';
 }catch(e){
+	//console.log(e);
 }
 //ctrl+F5 增加版本号来清空iframe的缓存的
 $(document).keydown(function(event) {
@@ -37,7 +35,7 @@ $(document).keydown(function(event) {
 	}
 });
 </script>
-<link rel="stylesheet" href="<?php echo base_url()?>statics/css/report.css?2" />
+<link rel="stylesheet" href="/statics/css/report.css?2" />
 <style type="text/css">
 .filter-menu .mod-choose-input{position: relative;*zoom: 1;}
 .filter-menu .mod-choose-input .ui-input{padding-right: 25px;width:226px; font-family:"宋体";}
@@ -45,7 +43,7 @@ $(document).keydown(function(event) {
 .ui-icon-ellipsis{ right:3px; }
 .ul-inline li{position:relative;}
 .no-query {
-    background: url("<?php echo base_url()?>statics/css/img/no_query.png") no-repeat scroll 100px 60px #fff;
+    background: url("/statics/css/img/no_query.png") no-repeat scroll 100px 60px #fff;
     border: 1px solid #ddd;
     height: 402px;
     margin-right: 18px;
@@ -66,8 +64,8 @@ $(document).keydown(function(event) {
           <input type="text" value="" class="ui-input ui-datepicker-input" name="filter-fromDate" id="filter-fromDate" /> - <input type="text" value="" class="ui-input ui-datepicker-input" name="filter-toDate" id="filter-toDate" />
         </li>
         <li>
-          <label>客户:</label>
-          <span class="mod-choose-input" id="filter-customer"><input type="text" class="ui-input" id="customerAuto"/><span class="ui-icon-ellipsis"></span></span>
+          <label>结算账户:</label>
+          <span class="mod-choose-input" id="filter-settlementAccount"><input type="text" class="ui-input" id="settlementAccountAuto"/><span class="ui-icon-ellipsis"></span></span>
         </li>
         
         <li><a class="ui-btn mrb" id="filter-submit">查询</a></li>
@@ -75,21 +73,19 @@ $(document).keydown(function(event) {
     </div>
     <div class="fr"><!--<a href="#" class="ui-btn ui-btn-sp mrb fl" id="btn-print">打印</a>--><a href="#" class="ui-btn fl" id="btn-export">导出</a></div>
   </div>
-  
+ 
   <div class="no-query"></div>
   <div class="ui-print">
-  <span id="config" class="ui-icon ui-state-default ui-icon-config"></span>
-		<div class="grid-wrap" id="grid-wrap">
-			<div class="grid-title">应收账款明细表</div>
+    <span id="config" class="ui-icon ui-state-default ui-icon-config"></span>
+    <div class="grid-wrap" id="grid-wrap">
+      <div class="grid-title">现金银行报表</div>
 			<div class="grid-subtitle"></div>
 	    	<table id="grid"></table>
 	   	</div>
 	</div>
-  
-  
 </div>
 <script>
-	seajs.use("dist/accountProceedsDetailNew");
+	seajs.use("dist/cashBankJournalNew");
 </script>
 </body>
 </html>
