--- a/views/report/customers-reconciliation-new.html
+++ b/views/report/customers-reconciliation-new.html
@@ -1,23 +1,21 @@
-<?php if(!defined('BASEPATH')) exit('No direct script access allowed');?>
- 
 <!doctype html>
 <html lang="zh-CN">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="renderer" content="webkit">
-<title>六和之家ERP</title>
-<link href="<?php echo base_url()?>statics/css/common.css?ver=20140430" rel="stylesheet">
-<link href="<?php echo base_url()?>statics/css/<?php echo sys_skin()?>/ui.min.css?ver=20140430" rel="stylesheet">
-<script src="<?php echo base_url()?>statics/js/common/seajs/2.1.1/sea.js?ver=20140430" id="seajsnode"></script>
-<script src="<?php echo base_url()?>statics/js/common/libs/jquery/jquery-1.10.2.min.js"></script>
+<title>小微企业ERP</title>
+<link href="/statics/css/common.css?ver=20140430" rel="stylesheet">
+<link href="/statics/css/green/ui.min.css?ver=20140430" rel="stylesheet">
+<script src="/statics/js/common/seajs/2.1.1/sea.js?ver=20140430" id="seajsnode"></script>
+<script src="/statics/js/common/libs/jquery/jquery-1.10.2.min.js"></script>
 <script type="text/javascript">
-var DOMAIN = document.domain;
 var WDURL = "";
 var SCHEME= "<?php echo sys_skin()?>";
 try{
 	document.domain = '<?php echo base_url()?>';
 }catch(e){
+	//console.log(e);
 }
 //ctrl+F5 增加版本号来清空iframe的缓存的
 $(document).keydown(function(event) {
@@ -37,7 +35,7 @@ $(document).keydown(function(event) {
 	}
 });
 </script>
-<link rel="stylesheet" href="<?php echo base_url()?>statics/css/report.css?2" />
+<link rel="stylesheet" href="/statics/css/report.css?2" />
 <style type="text/css">
 .filter-menu .mod-choose-input{position: relative;*zoom: 1;}
 .filter-menu .mod-choose-input .ui-input{padding-right: 25px;width:226px; font-family:"宋体";}
@@ -45,7 +43,7 @@ $(document).keydown(function(event) {
 .ui-icon-ellipsis{ right:3px; }
 .ul-inline li{position:relative;}
 .no-query {
-    background: url("<?php echo base_url()?>statics/css/img/no_query.png") no-repeat scroll 100px 60px #fff;
+    background: url("/statics/css/img/no_query.png") no-repeat scroll 100px 60px #fff;
     border: 1px solid #ddd;
     height: 402px;
     margin-right: 18px;
@@ -61,13 +59,13 @@ $(document).keydown(function(event) {
   <div class="mod-search cf">
     <div class="l">
       <ul class="ul-inline fix">
-        <li>
-                <label>购货单位:</label>
+      <li>
+                <label>销货单位:</label>
             <span class="ui-combo-wrap" id="customer">
             <input type="text" name="" class="input-txt" autocomplete="off" value="" data-ref="date">
             <i class="ui-icon-ellipsis"></i></span></dd>
             </li>
-    <li>
+        <li>
           <label>日期:</label>
           <input type="text" value="" class="ui-input ui-datepicker-input" name="filter-fromDate" id="filter-fromDate" /> - <input type="text" value="" class="ui-input ui-datepicker-input" name="filter-toDate" id="filter-toDate" />
         </li>
@@ -79,12 +77,12 @@ $(document).keydown(function(event) {
     </div>
     <div class="fr"><!--<a href="#" class="ui-btn ui-btn-sp mrb fl" id="btn-print">打印</a>--><a href="#" class="ui-btn fl" id="btn-export">导出</a></div>
   </div>
- 
+  
   <!-- grid begin -->
   <div class="ui-print" style="overflow: hidden; ">
     <span id="config" class="ui-icon ui-state-default ui-icon-config"></span>
     <div class="grid-wrap" id="grid-wrap">
-			<div class="grid-title">供应商对账单</div>
+			<div class="grid-title">客户对账单</div>
 			<div class="grid-subtitle"></div>
 	    	<table id="grid"></table>
 	   	</div>
@@ -94,7 +92,7 @@ $(document).keydown(function(event) {
   
 </div>
 <script>
-	seajs.use("dist/suppliersReconciliationNew");
+	seajs.use("dist/customersReconciliationNew");
 </script>
 </body>
 </html>
