--- a/views/report/sales-summary.html
+++ b/views/report/sales-summary.html
@@ -1,15 +1,14 @@
-<?php if(!defined('BASEPATH')) exit('No direct script access allowed');?>
 <!doctype html>
 <html lang="zh-CN">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="renderer" content="webkit">
-<title>六和之家ERP</title>
-<link href="<?php echo base_url()?>statics/css/common.css?ver=20140430" rel="stylesheet">
-<link href="<?php echo base_url()?>statics/css/<?php echo sys_skin()?>/ui.min.css?ver=20140430" rel="stylesheet">
-<script src="<?php echo base_url()?>statics/js/common/seajs/2.1.1/sea.js?ver=20140430" id="seajsnode"></script>
-<script src="<?php echo base_url()?>statics/js/common/libs/jquery/jquery-1.10.2.min.js"></script>
+<title>小微企业ERP</title>
+<link href="/statics/css/common.css?ver=20140430" rel="stylesheet">
+<link href="/statics/css/green/ui.min.css?ver=20140430" rel="stylesheet">
+<script src="/statics/js/common/seajs/2.1.1/sea.js?ver=20140430" id="seajsnode"></script>
+<script src="/statics/js/common/libs/jquery/jquery-1.10.2.min.js"></script>
 <script type="text/javascript">
 var WDURL = "";
 var SCHEME= "<?php echo sys_skin()?>";
@@ -36,7 +35,12 @@ $(document).keydown(function(event) {
 	}
 });
 </script>
-<link rel="stylesheet" href="<?php echo base_url()?>statics/css/report.css?2" />
+<link rel="stylesheet" href="/statics/css/report.css?2" />
+<style>
+.ui-icon-ellipsis{right:5px;}
+#grid tr{cursor:pointer;}
+
+</style>
 </head>
 <body>
 <div class="mod-report">
@@ -67,37 +71,80 @@ $(document).keydown(function(event) {
                 <label class="tit">仓库:</label>
                 <span class="mod-choose-input" id="filter-storage"><input type="text" class="ui-input" id="storageAuto"/><span class="ui-icon-ellipsis"></span></span>
               </li>
-              <li>
-                <label class="tit">销售人员:</label>
-                <span class="mod-choose-input" id="filter-saler"><input type="text" class="ui-input" id="salerAuto"><span class="ui-icon-ellipsis"></span></span>
-              </li>
-              <!--<li class="chk-list dn" id="profit-wrap">
+              <li class="chk-list dn" id="profit-wrap">
                 <label class="chk">
-                  <input type="checkbox" value="1" name="profit" />
+                  <input type="checkbox" value="profit" name="profit" />
                   计算毛利</label>
-              </li>-->
+                  <label class="chk">
+                  <input type="checkbox" value="showSku" name="showSku" />
+                  显示辅助属性</label>
+              </li>
             </ul>
             <div class="btns"> <a href="#" id="conditions-trigger" class="conditions-trigger" tabindex="-1">更多条件<b></b></a> <a class="ui-btn ui-btn-sp" id="filter-submit" href="#">确定</a> <a class="ui-btn" id="filter-reset" href="#" tabindex="-1">重置</a> </div>
           </div>
         </div>
         <a id="refresh" class="ui-btn ui-btn-refresh fl mrb"><b></b></a> <span class="txt fl" id="cur-search-tip"></span> </div>
-      <div class="fr"><!--<a href="#" class="ui-btn ui-btn-sp mrb fl" id="btn-print">打印</a>--><a href="#" class="ui-btn fl" id="btn-export">导出</a></div>
+      <div class="fr"><a href="#" class="ui-btn ui-btn-sp fl" id="btn-export">导出</a></div>
     </div>
   </div>
-	<div class="no-query"></div>
-	<div class="ui-print">
+  
+  <div class="ui-print">
     <span id="config" class="ui-icon ui-state-default ui-icon-config"></span>
-		<div class="grid-wrap" id="grid-wrap">
-			<div class="grid-title">商品销售明细表</div>
+    <div class="grid-wrap" id="grid-wrap">
+			<div class="grid-title">销售汇总表（按商品）</div>
 			<div class="grid-subtitle"></div>
 	    	<table id="grid"></table>
 	   	</div>
 	</div>
-
+    <div class="no-query"></div>
 </div>
-
+ <!--
+  <div class="grid-wrap">
+    <div class="grid">
+      <table width=100% class="caption">
+        <tr>
+          <td class='H'>销售汇总表（按商品）</td>
+        </tr>
+        <tr>
+          <td>日期：至</td>
+        </tr>
+      </table>
+      <table width="1128px" class="list">
+        <thead>
+          <tr>
+            <td>商品编号</td>
+            <td width="150px">商品名称</td>
+            <td>规格型号</td>
+            <td>单位</td>
+            <td>仓库</td>
+            <td>数量</td>
+            <td>单价</td>
+            <td>销售收入</td>
+            
+          </tr>
+        </thead>
+        <tbody>
+          
+          <tr>
+            <td colspan="5" class="R B">合计：</td>
+            <td class="R B"></td>
+            <td class="R B"></td>
+            <td class="R B"></td>
+            
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  -->
+  
 <script>
-	seajs.use("dist/salesDetail");
+	seajs.use("dist/salesSummary");
 </script>
 </body>
 </html>
+
+
+
+
+ 
