--- a/views/settings/saler-batch.html
+++ b/views/settings/saler-batch.html
@@ -1,4 +1,18 @@
-<?php $this->load->view('header');?>
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=1280, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="renderer" content="webkit|ie-stand|ie-comp">
+	<title>小微企业ERP</title>
+	<link href="../../statics/saas/scm/app2_release/css/common.css?ver=20150522" rel="stylesheet" type="text/css">
+	<link href="../../statics/saas/scm/app2_release/css/green/ui.min.css?ver=20150522" rel="stylesheet">
+	<script src="../../statics/saas/scm/app2_release/js/common/libs/jquery/jquery-1.10.2.min.js?10"></script>
+	<script src="../../statics/saas/scm/app2_release/js/common/libs/json3.min.js?10"></script>
+	<script src="../../statics/saas/scm/app2_release/js/common/common.js?ver=20151021"></script>
+	<script src="../../statics/saas/scm/app2_release/js/common/grid.js?ver=20151021"></script>
+	<script src="../../statics/saas/scm/app2_release/js/common/plugins.js?ver=20151021"></script>
+	<script src="../../statics/saas/scm/app2_release/js/common/plugins/jquery.dialog.js?self=true&ver=20151021"></script>
 
 <script type="text/javascript">
 var DOMAIN = document.domain;
@@ -52,7 +66,7 @@ body{ background:#FFF; }
     <div id="page"></div>
   </div>
 </div>
-<script src="<?php echo base_url()?>statics/js/dist/salerBatch.js?ver=20150427"></script>
+<script src="/statics/js/dist/salerBatch.js?ver=20150427"></script>
 </body>
 </html>
  
